# matrix

./: .gitignore  CLAUDE.md  Element X HarmonyOS 技术文档 v1.0.0.md  项目需求文档.md
docs/: Timeline_Full_Test_Checklist.md  Timeline_Progress_Summary.md  Timeline_Test_Guide.md  Timeline_Test_Report_20260418.md  Unified_Test_Checklist.md
matrix-harmonyos/: .gitignore  build-profile.json5  build.sh  debug.sh  setup-signing.sh
matrix-harmonyos/AppScope/: app.json5
matrix-harmonyos/AppScope/resources/base/element/: string.json
matrix-harmonyos/entry/: oh-package-lock.json5  oh-package.json5
matrix-harmonyos/entry/src/main/: module.json5
matrix-harmonyos/entry/src/main/cpp/: CMakeLists.txt
matrix-harmonyos/entry/src/main/cpp/types/libmatrix_bridge/: Index.d.ts  oh-package.json5
matrix-harmonyos/entry/src/main/ets/components/room/: RoomListItem.ets
matrix-harmonyos/entry/src/main/ets/components/timeline/: ImageMessage.ets
matrix-harmonyos/entry/src/main/ets/entryability/: EntryAbility.ets
matrix-harmonyos/entry/src/main/ets/models/: AuthModels.ets  RoomDataSource.ets  RoomModels.ets  TimelineDataSource.ets  TimelineModels.ets
matrix-harmonyos/entry/src/main/ets/pages/: Index.ets  LoginPage.ets  MainPage.ets  RoomListPage.ets  RoomMembersPage.ets  RoomPage.ets
matrix-harmonyos/entry/src/main/ets/services/: AccountService.ets  AuthService.ets  AvatarService.ets  MatrixBridge.ets  MediaService.ets  RoomListService.ets  RoomService.ets  TimelineService.ets
matrix-harmonyos/entry/src/main/resources/base/element/: string.json
matrix-harmonyos/entry/src/main/resources/base/profile/: main_pages.json
matrix-harmonyos/entry/src/ohosTest/ets/test/: List.test.ets  Room.test.ets  Timeline.test.ets
matrix-harmonyos/rust/: Cargo.toml
matrix-harmonyos/rust/.cargo/: config.toml
matrix-harmonyos/rust/napi-bridge/: Cargo.toml  build.rs
matrix-harmonyos/rust/napi-bridge/src/: account.rs  auth.rs  encryption.rs  error.rs  hello.rs  lib.rs  media.rs  room.rs  room_list.rs  runtime.rs  timeline.rs
matrix-harmonyos/rust/sdk-wrapper/: Cargo.toml
matrix-harmonyos/rust/sdk-wrapper/src/: account.rs  auth.rs  client.rs  encryption.rs  error.rs  lib.rs  media.rs  room.rs  room_list.rs  session.rs  timeline.rs
rules/: harmonyos.md
