[package]
name = "sdk-wrapper"
description = "matrix-rust-sdk 封装层 - 业务逻辑实现"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["rlib"]  # 静态库，供 napi-bridge 引用

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
ring = { workspace = true }

# matrix-sdk 已启用（Phase 1 SQLite 持久化 ✓）
matrix-sdk = { workspace = true }
matrix-sdk-ui = { workspace = true }
libsqlite3-sys = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
eyeball-im = { workspace = true }

# UUID 生成 - 1:1 复刻 Element X Android SessionPathsFactory
uuid = { version = "1.11", features = ["v4"] }